test/classes/deitz/nested/test_nested1.good
test_nested1.chpl:5: error: Illegal use of identifier 'd' from enclosing type
Note: This source location is a guess.
